Fix Netlify deployment: Move vite to dependencies, update build config, add debugging

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "vite build",
     "preview": "vite preview --host"
   },
-  "devDependencies": {
+  "dependencies": {
     "vite": "^7.0.3"
+  },
+  "devDependencies": {
   }
 }
