--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,11 @@
 # Netlify deployment configuration
 [build]
   publish = "dist"
-  command = "npm run build"
+  command = "npm ci && npm run build"
 
 [build.environment]
   NODE_VERSION = "18"
+  NPM_FLAGS = "--prefix=/opt/buildhome/.nvm/versions/node/v18.20.4"
 
 [[redirects]]
   from = "/*"
