Improve Netlify build configuration and add debugging tools
- Add engines specification to package.json for Node.js/npm version requirements
- Simplify netlify.toml to use npm ci for more reliable dependency installation
- Add debug script for troubleshooting build issues
- Create minimal netlify configuration backup
- Verified build works locally with npm ci

--- a/netlify-minimal.toml
+++ b/netlify-minimal.toml
@@ -1,4 +1,4 @@
-# Netlify deployment configuration
+# Minimal Netlify configuration
 [build]
   publish = "dist"
   command = "npm ci && npm run build"
